# Paral_1

./: README.md  report.txt  visualization.ipynb
lab2/: CMakeLists.txt  README.md  matrix.cpp  plot.py  verification_report.txt  verify.py
lab2/output/reports/: report_1_threads.txt  report_2_threads.txt  report_4_threads.txt  report_8_threads.txt  summary_report.txt
lab2/output/results_1_threads/size_100/: A_1.txt  A_2.txt  A_3.txt  A_4.txt  A_5.txt  B_1.txt  B_2.txt  B_3.txt  B_4.txt  B_5.txt  Bt_1.txt  Bt_2.txt  Bt_3.txt  C_1.txt  C_2.txt  C_3.txt  C_4.txt  C_5.txt
lab2/output/results_1_threads/size_500/: A_1.txt  A_2.txt  A_3.txt  A_4.txt  A_5.txt  B_1.txt  B_2.txt  B_3.txt  B_4.txt  B_5.txt  Bt_1.txt  Bt_2.txt  Bt_3.txt  C_1.txt  C_2.txt  C_3.txt  C_4.txt  C_5.txt
lab2/output/results_2_threads/size_100/: A_1.txt  A_2.txt  A_3.txt  A_4.txt  A_5.txt  B_1.txt  B_2.txt  B_3.txt  B_4.txt  B_5.txt  Bt_1.txt  Bt_2.txt  Bt_3.txt  C_1.txt  C_2.txt  C_3.txt  C_4.txt  C_5.txt
lab2/output/results_2_threads/size_500/: A_1.txt  A_2.txt  A_3.txt  A_4.txt  A_5.txt  B_1.txt  B_2.txt  B_3.txt  B_4.txt  B_5.txt  Bt_1.txt  Bt_2.txt  Bt_3.txt  C_1.txt  C_2.txt  C_3.txt  C_4.txt  C_5.txt
lab3/: CMakeLists.txt  README.md  generate_multiply.cpp  main.py  plot.py
lab3/data/: 1_1000.txt  1_200.txt  1_300.txt  1_400.txt  1_500.txt  1_600.txt  1_700.txt  1_800.txt  1_900.txt  2_100.txt  2_1000.txt  2_400.txt  2_600.txt  2_700.txt  2_800.txt  2_900.txt  result_100.txt  result_200.txt  result_300.txt  result_400.txt  result_500.txt  result_600.txt  result_700.txt  stats.txt
(+93 files in other folders)
